--- a/3galeri.html
+++ b/3galeri.html
@@ -10,7 +10,7 @@
     <section class="container">
         <!-- Navigation Bar Start -->
         <nav class="navbar">
-            <a href="1home.html" class="menu-navbar"><span>Home</span></a>
+            <a href="index.html" class="menu-navbar"><span>Home</span></a>
             <a href="2about.html" class="menu-navbar"><span>About</span></a>
             <a href="#" class="menu-navbar"><span>Galery</span></a>
             <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a>
