--- a/2about.html
+++ b/2about.html
@@ -19,22 +19,32 @@
 
         <!-- Content Start -->
         <section id="Content">
-            <H1 COLOR="WHITE">WORK IN PROGRES, COME BACK LATER!</H1>
-            <!--
             <div>
-                <div>
-                    <h1>Maulana Satria Nugraha, S.Ak.</h1>
-                    <p>Staf Administrasi berpengalaman dengan keahlian otomatisasi Excel dan akuntansi. Sedang belajar coding untuk meningkatkan keterampilan digital. Siap berkontribusi secara profesional.</p>
-                    <button class="button">
-                        <img src="bahan/Logo-WA.png" alt="Logo WA" class="Logo-WA"/>
-                        <a href="https://wa.me/082324955626" Class="wa-me">Hubungi Saya</a>
-                    </button>
-                </div>
+                <ul class="DataDiri">
+                    <li>Nama</li>
+                    <li>:</li>
+                    <li>Maulana Satria Nugraha</li>
+                </ul>
+                
+                <ul class="DataDiri">
+                    <li>Profesi</li>
+                    <li>:</li>
+                    <li>Staf Administrasi di SDIT Bina Ilmu</li>
+                </ul>
+                
+                <ul class="DataDiri">
+                    <li>Pendidikan Terakhir</li>
+                    <li>:</li>
+                    <li>S1 - Akuntansi</li>
+                </ul>
+
+                <ul class="DataDiri">
+                    <li>Bidang Keahlian</li>
+                    <li>:</li>
+                    <li>Administrasi, Akuntansi, Coding (Coming soon)</li>
+                </ul>
             </div>
-            <div>
-                <img src="bahan/Foto_CV-2.png" alt="Foto Saya nih" class="FotoProfil"/>
-            </div>
-            -->
+            <H1 COLOR="WHITE">SOME WORK IN PROGRES, COME BACK LATER!</H1>
         </section>
         <!-- Content End -->
 
