Upload Perbaikan Portofolio Part 2

--- a/2about.html
+++ b/2about.html
@@ -18,33 +18,33 @@
         <!-- Navigation Bar End -->
 
         <!-- Content Start -->
-        <section id="Content">
-            <div>
-                <ul class="DataDiri">
-                    <li>Nama</li>
-                    <li>:</li>
-                    <li>Maulana Satria Nugraha</li>
-                </ul>
-                
-                <ul class="DataDiri">
-                    <li>Profesi</li>
-                    <li>:</li>
-                    <li>Staf Administrasi di SDIT Bina Ilmu</li>
-                </ul>
-                
-                <ul class="DataDiri">
-                    <li>Pendidikan Terakhir</li>
-                    <li>:</li>
-                    <li>S1 - Akuntansi</li>
-                </ul>
-
-                <ul class="DataDiri">
-                    <li>Bidang Keahlian</li>
-                    <li>:</li>
-                    <li>Administrasi, Akuntansi, Coding (Coming soon)</li>
-                </ul>
-            </div>
-            <H1 COLOR="WHITE">SOME WORK IN PROGRES, COME BACK LATER!</H1>
+        <section id="Content2">
+            <H1>-- DATA DIRI --</H1>
+            <table border="0" cellpadding="10" cellspacing="0">
+                <tbody class="DataDiri">
+                    <tr>
+                        <td>Nama</td>
+                        <td>:</td>
+                        <td>Maulana Satria Nugraha</td>
+                    </tr>
+                    <tr>
+                        <td>Profesi</td>
+                        <td>:</td>
+                        <td>Staf Administrasi di SDIT Bina Ilmu</td>
+                    </tr>
+                    <tr>
+                        <td>Pendidikan Terakhir</td>
+                        <td>:</td>
+                        <td>S1 - Akuntansi</td>
+                    </tr>
+                    <tr>
+                        <td>Bidang Keahlian</td>
+                        <td>:</td>
+                        <td>Administrasi, Akuntansi, Coding (Coming soon)</td>
+                    </tr>
+                </tbody>
+            </table>
+            <H3 class="Alert">SOME WORK IN PROGRESS, PLEASE COME BACK LATER!</H3>
         </section>
         <!-- Content End -->
 
