--- a/4portofolio.html
+++ b/4portofolio.html
@@ -19,7 +19,7 @@
 
         <!-- Content Start -->
         <section id="Content">
-            <H1 COLOR="WHITE">WORK IN PROGRES, COME BACK LATER!</H1>
+            <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
             <!--
             <div>
                 <div>
