--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="Content">
             <div>
                 <div>
-                    <h1>Maulana Satria Nugraha, S.Ak.</h1>
+                    <h2>Maulana Satria Nugraha, S.Ak.</h2>
                     <p>Staf Administrasi berpengalaman dengan keahlian otomatisasi Excel dan akuntansi. Sedang belajar coding untuk meningkatkan keterampilan digital. Siap berkontribusi secara profesional.</p>
                     <button class="button">
                         <img src="bahan/Logo-WA.png" alt="Logo WA" class="Logo-WA"/>
@@ -37,7 +37,7 @@
 
         <!-- Footer Start -->
          <footer>
-            <p>Terima Kasih Telah Mengunjungi Profil Saya!</p>
+            <p>©2025 Maulana Satria Nugraha,S.Ak. Semua hak dilindungi.</p>
          </footer>
          <!-- Footer End -->
     </section>
