--- a/2about.html
+++ b/2about.html
@@ -49,8 +49,8 @@
         <!-- Content End -->
 
         <!-- Footer Start -->
-         <footer>
-            <p>Terima Kasih Telah Mengunjungi Profil Saya!</p>
+        <footer>
+            <p>©2025 Maulana Satria Nugraha,S.Ak. Semua hak dilindungi.</p>
          </footer>
          <!-- Footer End -->
     </section>
