--- a/4portofolio.html
+++ b/4portofolio.html
@@ -39,8 +39,8 @@
         <!-- Content End -->
 
         <!-- Footer Start -->
-         <footer>
-            <p>Terima Kasih Telah Mengunjungi Profil Saya!</p>
+        <footer>
+            <p>©2025 Maulana Satria Nugraha,S.Ak. Semua hak dilindungi.</p>
          </footer>
          <!-- Footer End -->
     </section>
