Merubah Total Menu Index, Header dan Footer

--- a/2about.html
+++ b/2about.html
@@ -19,6 +19,30 @@
 
         <!-- Content Start -->
         <section id="Content2">
+            <section class="profil">
+                <div class="judul">TENTANG SAYA</div>
+                <p>Halo! Saya Maulana Satria Nugraha, seorang staf administrasi berpengalaman dengan keahlian dalam otomatisasi Excel dan akuntansi. 
+                    Saat ini, saya juga sedang mendalami dunia coding untuk meningkatkan keterampilan digital dan membuka peluang baru.
+                </p>
+                <p>Dengan latar belakang pendidikan S1 Akuntansi, saya memiliki pemahaman yang kuat dalam pengelolaan keuangan serta administrasi. 
+                    Saya telah mengembangkan berbagai sistem otomatisasi untuk meningkatkan efisiensi kerja, termasuk laporan keuangan otomatis, 
+                    database pegawai, dan slip gaji sederhana.
+                </p>
+                <p>
+                    Saat ini, saya bekerja sebagai Staf Tata Usaha di SDIT/SMPIT Bina Ilmu Pemalang serta berperan sebagai Koordinator Helpdesk 
+                    PPDB. Saya memiliki pengalaman dalam manajemen administrasi, penagihan, serta penyusunan laporan keuangan sekolah.
+                </p>
+                <p>
+                    Saya sedang memperluas keterampilan saya di bidang teknologi dengan mempelajari HTML, CSS, dan JavaScript. Dengan bekal ini, 
+                    saya mulai memahami dasar-dasar pengembangan web dan mengembangkan proyek sederhana. Saya berharap keterampilan ini dapat 
+                    membantu saya dalam menciptakan solusi digital yang lebih efisien dan inovatif.
+                </p>
+                <p>
+                    Selain itu, saya memiliki ketertarikan dalam Fiqih Muamalah Kontemporer dan terus belajar melalui berbagai sumber. 
+                    Dengan semangat belajar mandiri, saya selalu mencari cara untuk meningkatkan keterampilan dan memberikan kontribusi terbaik 
+                    dalam setiap pekerjaan yang saya lakukan.
+                </p>
+            </section>
             <H1>-- DATA DIRI --</H1>
             <table border="0" cellpadding="10" cellspacing="0">
                 <tbody class="DataDiri">
