Mengganti Hamalan awal dan About, dll
Memindah halaman index ke halaman about, karna kayaknya lebih cocok seperti itu, merubah tampilan navbar dan footer semua halaman, memperbaiki beberapa class di html dan css

--- a/2about.html
+++ b/2about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,74 +9,68 @@
 <body>
     <section class="container">
         <!-- Navigation Bar Start -->
-        <nav class="navbar">
-            <a href="index.html" class="menu-navbar"><span>Home</span></a>
-            <a href="#" class="menu-navbar"><span>About</span></a>
-            <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-            <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a>
+      <header class="navbar">
+        <a href="index.html" class="navJudul">MyPortfolio</a>
+        <nav>
+          <a href="index.html" class="menu-navbar"><span>Home</span></a>
+          <a href="#" class="menu-navbar active"><span>About</span></a>
+          <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="4portofolio.html" class="menu-navbar"
+            ><span>Portofolio</span></a
+          >
         </nav>
-        <!-- Navigation Bar End -->
+      </header>
+      <!-- Navigation Bar End -->
 
-        <!-- Content Start -->
-        <section id="Content2">
-            <section class="profil">
-                <div class="judul">TENTANG SAYA</div>
-                <p>Halo! Saya Maulana Satria Nugraha, seorang staf administrasi berpengalaman dengan keahlian dalam otomatisasi Excel dan akuntansi. 
-                    Saat ini, saya juga sedang mendalami dunia coding untuk meningkatkan keterampilan digital dan membuka peluang baru.
-                </p>
-                <p>Dengan latar belakang pendidikan S1 Akuntansi, saya memiliki pemahaman yang kuat dalam pengelolaan keuangan serta administrasi. 
-                    Saya telah mengembangkan berbagai sistem otomatisasi untuk meningkatkan efisiensi kerja, termasuk laporan keuangan otomatis, 
-                    database pegawai, dan slip gaji sederhana.
-                </p>
-                <p>
-                    Saat ini, saya bekerja sebagai Staf Tata Usaha di SDIT/SMPIT Bina Ilmu Pemalang serta berperan sebagai Koordinator Helpdesk 
-                    PPDB. Saya memiliki pengalaman dalam manajemen administrasi, penagihan, serta penyusunan laporan keuangan sekolah.
-                </p>
-                <p>
-                    Saya sedang memperluas keterampilan saya di bidang teknologi dengan mempelajari HTML, CSS, dan JavaScript. Dengan bekal ini, 
-                    saya mulai memahami dasar-dasar pengembangan web dan mengembangkan proyek sederhana. Saya berharap keterampilan ini dapat 
-                    membantu saya dalam menciptakan solusi digital yang lebih efisien dan inovatif.
-                </p>
-                <p>
-                    Selain itu, saya memiliki ketertarikan dalam Fiqih Muamalah Kontemporer dan terus belajar melalui berbagai sumber. 
-                    Dengan semangat belajar mandiri, saya selalu mencari cara untuk meningkatkan keterampilan dan memberikan kontribusi terbaik 
-                    dalam setiap pekerjaan yang saya lakukan.
-                </p>
-            </section>
-            <H1>-- DATA DIRI --</H1>
-            <table border="0" cellpadding="10" cellspacing="0">
-                <tbody class="DataDiri">
-                    <tr>
-                        <td>Nama</td>
-                        <td>:</td>
-                        <td>Maulana Satria Nugraha</td>
-                    </tr>
-                    <tr>
-                        <td>Profesi</td>
-                        <td>:</td>
-                        <td>Staf Administrasi di SDIT Bina Ilmu</td>
-                    </tr>
-                    <tr>
-                        <td>Pendidikan Terakhir</td>
-                        <td>:</td>
-                        <td>S1 - Akuntansi</td>
-                    </tr>
-                    <tr>
-                        <td>Bidang Keahlian</td>
-                        <td>:</td>
-                        <td>Administrasi, Akuntansi, Coding (Coming soon)</td>
-                    </tr>
-                </tbody>
-            </table>
-            <H3 class="Alert">SOME WORK IN PROGRESS, PLEASE COME BACK LATER!</H3>
+        <!-- Simple Profil Start -->
+        <section class="Aprofil">
+            <img src="bahan/Foto_CV-2.png" alt="Maulana Satria Nugraha" />
+            <h2>Maulana Satria Nugraha</h2>
+            <p>Akuntan & Web Developer dengan Keahlian dalam Automasi Data</p>
+            <a href="4portofolio.html">Lihat Portofolio</a>
         </section>
-        <!-- Content End -->
+        <!-- Simple Profil End -->
+
+        <!-- Tentang Saya Start -->
+         <section class="Atentang">
+            <h2>Tentang Saya</h2>
+            <p>
+                Staf Administrasi berpengalaman dengan keahlian 
+                otomatisasi Excel dan akuntansi. Sedang belajar 
+                coding untuk meningkatkan keterampilan digital. 
+                Siap berkontribusi secara profesional.
+            </p>
+         </section>
+        <!-- Tentang Saya End -->
+
+        <!-- Portofolio Start -->
+         <section class="Aportfolio">
+            <h2>Portofolio</h2>
+            <div class="Aport">
+                <div>
+                    <img src="#" alt="project1"/>
+                    <h2>proyek1</h2>
+                    <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+                </div>
+                <div>
+                    <img src="#" alt="project2"/>
+                    <h2>proyek2</h2>
+                    <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+                </div>
+                <div>
+                    <img src="#" alt="project3"/>
+                    <h2>proyek3</h2>
+                    <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+                </div>
+            </div>
+         </section>
+        <!-- Portofolio End -->
 
         <!-- Footer Start -->
-        <footer>
-            <p>©2025 Maulana Satria Nugraha,S.Ak. Semua hak dilindungi.</p>
-         </footer>
-         <!-- Footer End -->
+      <footer>
+        <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
+      </footer>
+      <!-- Footer End -->
     </section>
     
 </body>
