--- a/4portofolio.html
+++ b/4portofolio.html
@@ -9,13 +9,17 @@
 <body>
     <section class="container">
         <!-- Navigation Bar Start -->
-        <nav class="navbar">
-            <a href="index.html" class="menu-navbar"><span>Home</span></a>
-            <a href="2about.html" class="menu-navbar"><span>About</span></a>
-            <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-            <a href="#" class="menu-navbar"><span>Portofolio</span></a>
+      <header class="navbar">
+        <a href="index.html" class="navJudul">MyPortfolio</a>
+        <nav>
+          <a href="index.html" class="menu-navbar"><span>Home</span></a>
+          <a href="2about.html" class="menu-navbar"><span>About</span></a>
+          <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="#" class="menu-navbar active"><span>Portofolio</span></a
+          >
         </nav>
-        <!-- Navigation Bar End -->
+      </header>
+      <!-- Navigation Bar End -->
 
         <!-- Content Start -->
         <section id="Content">
@@ -40,9 +44,9 @@
 
         <!-- Footer Start -->
         <footer>
-            <p>©2025 Maulana Satria Nugraha,S.Ak. Semua hak dilindungi.</p>
+            <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
          </footer>
-         <!-- Footer End -->
+        <!-- Footer End -->
     </section>
     
 </body>
