--- a/index.html
+++ b/index.html
@@ -1,81 +1,80 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="custom.css" />
     <title>Profil Maul.code</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="container">
-        <!-- Navigation Bar Start -->
-        <header class="navbar">
-            <a href="index.html" class="navJudul">MyPortfolio</a>
-            <nav>
-                <a href="#" class="menu-navbar active"><span>Home</span></a>
-                <a href="2about.html" class="menu-navbar"><span>About</span></a>
-                <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-                <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a>
-            </nav>
-        </header>
-        <!-- Navigation Bar End -->
+      <!-- Navigation Bar Start -->
+      <header class="navbar">
+        <a href="index.html" class="navJudul">MyPortfolio</a>
+        <nav>
+          <a href="#" class="menu-navbar active"><span>Home</span></a>
+          <a href="2about.html" class="menu-navbar"><span>About</span></a>
+          <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
+          <a href="4portofolio.html" class="menu-navbar"
+            ><span>Portofolio</span></a
+          >
+        </nav>
+      </header>
+      <!-- Navigation Bar End -->
 
-        <!-- Simple Profil Start -->
-        <section class="Hprofil">
-            <img src="bahan/Foto_CV-2.png" alt="Maulana Satria Nugraha" />
-            <h2>Maulana Satria Nugraha</h2>
-            <p>Akuntan & Web Developer dengan Keahlian dalam Automasi Data</p>
-            <a href="4portofolio.html">Lihat Portofolio</a>
-        </section>
-        <!-- Simple Profil End -->
-
-        <!-- Tentang Saya Start -->
-         <section class="Htentang">
-            <h2>Tentang Saya</h2>
+      <!--Main Content Start-->
+      <section class="home">
+        <!-- Simple Home Profil Start -->
+        <section class="started">
+          <div>
+            <h1>Maulana Satria Nugraha, S.Ak.</h1>
             <p>
-                Staf Administrasi berpengalaman dengan keahlian 
-                otomatisasi Excel dan akuntansi. Sedang belajar 
-                coding untuk meningkatkan keterampilan digital. 
-                Siap berkontribusi secara profesional.
+              Staf Administrasi berpengalaman dengan keahlian otomatisasi Excel
+              dan akuntansi. Sedang belajar coding untuk meningkatkan
+              keterampilan digital. Siap berkontribusi secara profesional.
             </p>
-         </section>
-        <!-- Tentang Saya End -->
+            <button>Let's get started</button>
+          </div>
+          <img src="bahan/Foto_CV-2.png" alt="Maulana Satria Nugraha" />
+        </section>
+        <!-- Simple Home Profil End -->
 
-        <!-- Portofolio Start -->
-         <section class="Hportfolio">
-            <h2>Portofolio</h2>
-            <div class="Hport">
-                <div>
-                    <img src="#" alt="project1"/>
-                    <h2>proyek1</h2>
-                    <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-                <div>
-                    <img src="#" alt="project2"/>
-                    <h2>proyek2</h2>
-                    <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-                <div>
-                    <img src="#" alt="project3"/>
-                    <h2>proyek3</h2>
-                    <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-            </div>
-         </section>
-        <!-- Portofolio End -->
+        <!-- Social Media Start -->
+        <section class="socialMedia">
+          <p>contact:</p>
+          <div>
+            <a href="https://github.com/CodeByMaul" target="_blank">
+              <img src="bahan/logo-GitHub.png" />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/maulana-satria-nugraha"
+              target="_blank"
+            >
+              <img src="bahan/logo-Linkedin.png" />
+            </a>
+            <a
+              href="https://www.instagram.com/maulana.satria_n/"
+              target="_blank"
+            >
+              <img src="bahan/logo-IG.png" />
+            </a>
+            <a
+              href="https://www.facebook.com/msn.socialpreneur/"
+              target="_blank"
+            >
+              <img src="bahan/logo-FB.png" />
+            </a>
+          </div>
+        </section>
+        <!-- Social Media End -->
+      </section>
+      <!--Main Content End-->
 
-        <!-- Footer Start -->
-         <footer>
-            <div> Follow Me:
-                <a href="https://github.com/CodeByMaul" target="_blank">GitHub</a>
-                <a href="https://www.linkedin.com/in/maulana-satria-nugraha" target="_blank">LinkedIn</a>
-                <a href="https://www.instagram.com/maulana.satria_n/" target="_blank">Instagram</a>
-                <a href="https://www.facebook.com/msn.socialpreneur/" target="_blank">Facebook</a>
-            </div>
-            <p>©2025 Maulana Satria Nugraha. Semua hak dilindungi.</p>
-         </footer>
-         <!-- Footer End -->
+      <!-- Footer Start -->
+      <footer>
+        <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
+      </footer>
+      <!-- Footer End -->
     </section>
-    
-</body>
+  </body>
 </html>
