Update Halaman Home dan About, beserta CSS dan lain2
Merubah semua extensi gambar menjadi '.webp' , foto_CV.png di hapus, foto_CV-2 di rename menjadi foto_CV., menambahkan style default untuk <a>, menambahkan container Main, penyesuaian style css = Memindahkan semua margin dan padding kanan/kiri halaman ke class container menjadi 'padding: 0 3%', merubah style hover untuk durasi transisi navbar dan link socialmedia, merubah padding class socialMedia, merubah padding dan width pada navbar. menambahkan 'alt=' pada setiap gambar. menambahkan background color dan padding 10px pada foto profil. menghilangkan class 'Atentang', memperbaiki isi dan css 'Aprofil'.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
               dan akuntansi. Sedang belajar coding untuk meningkatkan
               keterampilan digital. Siap berkontribusi secara profesional.
             </p>
-            <button>Let's get started</button>
+            <button>
+              <a href="2about.html">Let's get started</a>
+            </button>
           </div>
-          <img src="bahan/Foto_CV-2.png" alt="Maulana Satria Nugraha" />
+          <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
         </section>
         <!-- Simple Home Profil End -->
 
@@ -44,25 +46,16 @@
           <p>contact:</p>
           <div>
             <a href="https://github.com/CodeByMaul" target="_blank">
-              <img src="bahan/logo-GitHub.png" />
+              <img src="bahan/logo-GitHub.webp" alt="GitHub_Maulana.SN"/>
             </a>
-            <a
-              href="https://www.linkedin.com/in/maulana-satria-nugraha"
-              target="_blank"
-            >
-              <img src="bahan/logo-Linkedin.png" />
+            <a href="https://www.linkedin.com/in/maulana-satria-nugraha" target="_blank" >
+              <img src="bahan/logo-Linkedin.webp" alt="LinkedIn_Maulana.SN" />
             </a>
-            <a
-              href="https://www.instagram.com/maulana.satria_n/"
-              target="_blank"
-            >
-              <img src="bahan/logo-IG.png" />
+            <a href="https://www.instagram.com/maulana.satria_n/" target="_blank" >
+              <img src="bahan/logo-IG.webp" alt="IG_Maulana.SN"/>
             </a>
-            <a
-              href="https://www.facebook.com/msn.socialpreneur/"
-              target="_blank"
-            >
-              <img src="bahan/logo-FB.png" />
+            <a href="https://www.facebook.com/msn.socialpreneur/" target="_blank" >
+              <img src="bahan/logo-FB.webp" alt="FB_Maulana.SN" />
             </a>
           </div>
         </section>
