--- a/2about.html
+++ b/2about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="container">
-        <!-- Navigation Bar Start -->
+      <!-- Navigation Bar Start -->
       <header class="navbar">
         <a href="index.html" class="navJudul">MyPortfolio</a>
         <nav>
@@ -16,57 +16,59 @@
           <a href="#" class="menu-navbar active"><span>About</span></a>
           <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
           <a href="4portofolio.html" class="menu-navbar"
-            ><span>Portofolio</span></a
-          >
+            ><span>Portofolio</span></a>
         </nav>
       </header>
       <!-- Navigation Bar End -->
 
-        <!-- Simple Profil Start -->
-        <section class="Aprofil">
-            <img src="bahan/Foto_CV-2.png" alt="Maulana Satria Nugraha" />
-            <h2>Maulana Satria Nugraha</h2>
-            <p>Akuntan & Web Developer dengan Keahlian dalam Automasi Data</p>
-            <a href="4portofolio.html">Lihat Portofolio</a>
-        </section>
-        <!-- Simple Profil End -->
+      <!-- Simple Profil Start -->
+      <section class="Aprofil">
+        <h1>Tentang Saya</h2>
+        <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
+        <h2>Maulana Satria Nugraha</h2>
+        <p>
+          Saya adalah seorang Staf Administrasi berpengalaman 
+          di Kabupaten Pemalang dengan latar belakang pendidikan 
+          Akuntansi. Memiliki keahlian dalam otomatisasi data 
+          menggunakan Excel / Spreadsheet serta sedang mengembangkan keterampilan 
+          coding untuk meningkatkan efisiensi kerja dan solusi 
+          digital. Berkomitmen untuk terus belajar dan berkontribusi 
+          secara profesional dalam dunia administrasi, keuangan dan teknologi.
+        </p>
+        <a href="4portofolio.html">Lihat Portofolio</a>
+      </section>
+      <!-- Simple Profil End -->
 
-        <!-- Tentang Saya Start -->
-         <section class="Atentang">
-            <h2>Tentang Saya</h2>
-            <p>
-                Staf Administrasi berpengalaman dengan keahlian 
-                otomatisasi Excel dan akuntansi. Sedang belajar 
-                coding untuk meningkatkan keterampilan digital. 
-                Siap berkontribusi secara profesional.
-            </p>
-         </section>
-        <!-- Tentang Saya End -->
+      <!-- SKILL list Start -->
+      <!-- SKILL list End -->
 
-        <!-- Portofolio Start -->
-         <section class="Aportfolio">
-            <h2>Portofolio</h2>
-            <div class="Aport">
-                <div>
-                    <img src="#" alt="project1"/>
-                    <h2>proyek1</h2>
-                    <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-                <div>
-                    <img src="#" alt="project2"/>
-                    <h2>proyek2</h2>
-                    <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-                <div>
-                    <img src="#" alt="project3"/>
-                    <h2>proyek3</h2>
-                    <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-                </div>
-            </div>
-         </section>
-        <!-- Portofolio End -->
+      <!-- Experience Start -->
+      <!-- Experience End -->
 
-        <!-- Footer Start -->
+      <!-- Portofolio Start -->
+      <section class="Aportfolio">
+        <h2>Portofolio</h2>
+        <div class="Aport">
+          <div>
+            <img src="#" alt="project1"/>
+            <h2>proyek1</h2>
+            <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+          </div>
+          <div>
+            <img src="#" alt="project2"/>
+            <h2>proyek2</h2>
+            <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+          </div>
+          <div>
+            <img src="#" alt="project3"/>
+            <h2>proyek3</h2>
+            <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+          </div>
+        </div>
+      </section>
+      <!-- Portofolio End -->
+
+      <!-- Footer Start -->
       <footer>
         <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
       </footer>
