Memperbaiki footer dan menambahkan style responsive
Footer diperbaiki dengan menghilangkan ''place-content:center'',//, penyesuaian padding pada class=Alert,//, menambahkan style reponsive-website,//, membuat tombol bercahaya,// menambahkan class=Askill.

--- a/2about.html
+++ b/2about.html
@@ -25,7 +25,7 @@
       <section class="Aprofil">
         <h1>Tentang Saya</h2>
         <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
-        <h2>Maulana Satria Nugraha</h2>
+        <h2>Maulana Satria Nugraha, S.Ak.</h2>
         <p>
           Saya adalah seorang Staf Administrasi berpengalaman 
           di Kabupaten Pemalang dengan latar belakang pendidikan 
@@ -40,6 +40,21 @@
       <!-- Simple Profil End -->
 
       <!-- SKILL list Start -->
+      <section class="Askill">
+        <h1>Keahlian</h1>
+        <div>
+          <h3>Akuntansi & Keuangan</h3>
+          <p>Laporan Keuangan, rasio keuangan</p>
+        </div>
+        <div>
+          <h3>MS Excel & Spreadsheet</h3>
+          <p>Data Entry, Otomatisasi Data & Rumus</p>
+        </div>
+        <div>
+          <h3>Web Development</h3>
+          <p>html, CSS, JavaScript</p>
+        </div>
+      </section>
       <!-- SKILL list End -->
 
       <!-- Experience Start -->
