--- a/3galeri.html
+++ b/3galeri.html
@@ -21,15 +21,16 @@
       </header>
       <!-- Navigation Bar End -->
 
-        <!-- Content Start -->
-        <section id="Content">
-            <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
-        </section>
-        <!-- Content End -->
+      <!-- Content Start -->
+      <section class="main">
+        <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
+      </section>
+            
+      <!-- Content End -->
 
-        <!-- Footer Start -->
+      <!-- Footer Start -->
         <footer>
-            <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
+          <p>©2025 Maulana Satria Nugraha. All Rights Reserved.</p>
         </footer>
         <!-- Footer End -->
     </section>
