--- a/4portofolio.html
+++ b/4portofolio.html
@@ -22,23 +22,8 @@
       <!-- Navigation Bar End -->
 
         <!-- Content Start -->
-        <section id="Content">
+        <section class="main">
             <H1 Class="Alert">WORK IN PROGRES, PLEASE COME BACK LATER!</H1>
-            <!--
-            <div>
-                <div>
-                    <h1>Maulana Satria Nugraha, S.Ak.</h1>
-                    <p>Staf Administrasi berpengalaman dengan keahlian otomatisasi Excel dan akuntansi. Sedang belajar coding untuk meningkatkan keterampilan digital. Siap berkontribusi secara profesional.</p>
-                    <button class="button">
-                        <img src="bahan/Logo-WA.png" alt="Logo WA" class="Logo-WA"/>
-                        <a href="https://wa.me/082324955626" Class="wa-me">Hubungi Saya</a>
-                    </button>
-                </div>
-            </div>
-            <div>
-                <img src="bahan/Foto_CV-2.png" alt="Foto Saya nih" class="FotoProfil"/>
-            </div>
-            -->
         </section>
         <!-- Content End -->
 
