Membuat navbar burger untuk tampilan lebih responsive
Membuat class baru : .nav-link, .burger ,//, membuat style css untuk class dan menu terkait ,//,  membuat file javascript: logic.js.

--- a/4portofolio.html
+++ b/4portofolio.html
@@ -11,13 +11,20 @@
         <!-- Navigation Bar Start -->
       <header class="navbar">
         <a href="index.html" class="navJudul">MyPortfolio</a>
-        <nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
           <a href="2about.html" class="menu-navbar"><span>About</span></a>
           <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
           <a href="#" class="menu-navbar active"><span>Portofolio</span></a
           >
         </nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <div class="burger" onclick="toggleMenu()">
+          <div class="line1" ></div>
+          <div class="line2" ></div>
+          <div class="line3" ></div>
+        </div>
       </header>
       <!-- Navigation Bar End -->
 
@@ -33,6 +40,6 @@
         </footer>
         <!-- Footer End -->
     </section>
-    
+    <script src="logic.js"></script>
 </body>
 </html>
