--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <!-- Navigation Bar Start -->
       <header class="navbar">
         <a href="index.html" class="navJudul">MyPortfolio</a>
-        <nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <nav class="nav-link">
           <a href="#" class="menu-navbar active"><span>Home</span></a>
           <a href="2about.html" class="menu-navbar"><span>About</span></a>
           <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
@@ -19,6 +20,12 @@
             ><span>Portofolio</span></a
           >
         </nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <div class="burger" onclick="toggleMenu()">
+          <div class="line1" ></div>
+          <div class="line2" ></div>
+          <div class="line3" ></div>
+        </div>
       </header>
       <!-- Navigation Bar End -->
 
@@ -69,5 +76,6 @@
       </footer>
       <!-- Footer End -->
     </section>
+    <script src="logic.js"></script>
   </body>
 </html>
