--- a/2about.html
+++ b/2about.html
@@ -9,15 +9,22 @@
 <body>
     <section class="container">
       <!-- Navigation Bar Start -->
-      <header class="navbar">
+      <header class="navbar"> 
         <a href="index.html" class="navJudul">MyPortfolio</a>
-        <nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <nav class="nav-link">
           <a href="index.html" class="menu-navbar"><span>Home</span></a>
           <a href="#" class="menu-navbar active"><span>About</span></a>
           <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
           <a href="4portofolio.html" class="menu-navbar"
             ><span>Portofolio</span></a>
         </nav>
+        <!-- Navigation Bar Tampilan Dekstop -->
+        <div class="burger" onclick="toggleMenu()">
+          <div class="line1" ></div>
+          <div class="line2" ></div>
+          <div class="line3" ></div>
+        </div>
       </header>
       <!-- Navigation Bar End -->
 
@@ -30,9 +37,9 @@
           Saya adalah seorang Staf Administrasi berpengalaman 
           di Kabupaten Pemalang dengan latar belakang pendidikan 
           Akuntansi. Memiliki keahlian dalam otomatisasi data 
-          menggunakan Excel / Spreadsheet serta sedang mengembangkan keterampilan 
-          coding untuk meningkatkan efisiensi kerja dan solusi 
-          digital. Berkomitmen untuk terus belajar dan berkontribusi 
+          menggunakan Excel / Spreadsheet serta sedang mengembangkan 
+          keterampilan coding untuk meningkatkan efisiensi kerja dan 
+          solusi digital. Berkomitmen untuk terus belajar dan berkontribusi 
           secara profesional dalam dunia administrasi, keuangan dan teknologi.
         </p>
         <a href="4portofolio.html">Lihat Portofolio</a>
@@ -89,6 +96,6 @@
       </footer>
       <!-- Footer End -->
     </section>
-    
+    <script src="logic.js"></script>  
 </body>
 </html>
