--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               dan akuntansi. Sedang belajar coding untuk meningkatkan
               keterampilan digital. Siap berkontribusi secara profesional.
             </p>
-            <button>
-              <a href="2about.html">Let's get started</a>
+            <button onclick="window.location.href='2about.html';">
+              Let's get started
             </button>
           </div>
           <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
