Pemisahan antara css biasa dengan media query (responsive website) dan menambah styling
merubah height .home dan footer,//, menambahkan section .main pada 2about.html,//,Membuat Responsive.css,//, custom.css : menghilangkan gap pada .navbar,/, merubah padding-top pada class ''home'',/, mengurangi gap pada .socialMedia,/, merubah padding-top pada .Aprofil,/, menambah style untuk ''Askill p {}'',/, merubah manambah text-align:center pada ''.Alert'',''Aexp h3'',''Aexp h5'',//, Responsive.css : Merubah ukuran .started h1,/, menambah flex-direction:column untuk class .Aport,/, merubah padding untuk Askill & Aexp beserta bawahnya,/, menambah media max-width 1000px & 485px.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
   </head>
   <body>
@@ -16,9 +17,7 @@
           <a href="#" class="menu-navbar active"><span>Home</span></a>
           <a href="2about.html" class="menu-navbar"><span>About</span></a>
           <a href="3galeri.html" class="menu-navbar"><span>Galery</span></a>
-          <a href="4portofolio.html" class="menu-navbar"
-            ><span>Portofolio</span></a
-          >
+          <a href="4portofolio.html" class="menu-navbar"><span>Portofolio</span></a>
         </nav>
         <!-- Navigation Bar Tampilan Dekstop -->
         <div class="burger" onclick="toggleMenu()">
