--- a/2about.html
+++ b/2about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="custom.css" />
+    <link rel="stylesheet" href="Responsive.css" />
     <title>Profil Maul.code</title>
 </head>
 <body>
@@ -28,135 +29,139 @@
       </header>
       <!-- Navigation Bar End -->
 
-      <!-- Simple Profil Start -->
-      <section class="Aprofil">
-        <h1>About Me</h2>
-        <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
-        <h2>Maulana Satria Nugraha, S.Ak.</h2>
-        <p>
-          Saya adalah seorang Staf Administrasi dengan pengalaman di 
-          bidang akuntansi dan keuangan. Menguasai otomatisasi data 
-          menggunakan Excel/Spreadsheet dan saat ini sedang mengembangkan 
-          keahlian dalam coding untuk meningkatkan efisiensi kerja. 
-          Berpengalaman dalam administrasi sekolah, manajemen keuangan, 
-          dan pengelolaan data. Saya selalu berkomitmen untuk terus belajar 
-          dan berkontribusi dalam bidang administrasi, keuangan, dan teknologi.
-        </p>
-        <a href="4portofolio.html">Lihat Portofolio</a>
-      </section>
-      <!-- Simple Profil End -->
+      <!-- Main Content Start -->
+       <section class="main">
+        <!-- Simple Profil Start -->
+          <section class="Aprofil">
+            <h1>About Me</h2>
+            <img src="bahan/Foto_CV.webp" alt="Maulana Satria Nugraha" />
+            <h2>Maulana Satria Nugraha, S.Ak.</h2>
+            <p>
+              Saya adalah seorang Staf Administrasi dengan pengalaman di 
+              bidang akuntansi dan keuangan. Menguasai otomatisasi data 
+              menggunakan Excel/Spreadsheet dan saat ini sedang mengembangkan 
+              keahlian dalam coding untuk meningkatkan efisiensi kerja. 
+              Berpengalaman dalam administrasi sekolah, manajemen keuangan, 
+              dan pengelolaan data. Saya selalu berkomitmen untuk terus belajar 
+              dan berkontribusi dalam bidang administrasi, keuangan, dan teknologi.
+            </p>
+            <a href="4portofolio.html">Lihat Portofolio</a>
+          </section>
+        <!-- Simple Profil End -->
 
-      <!-- SKILL list Start -->
-      <section class="Askill">
-        <h1>Professional Skill</h1>
-        <div>
-          <h3>Akuntansi & Keuangan</h3>
-          <p>Laporan Keuangan, rasio keuangan</p>
-        </div>
-        <div>
-          <h3>MS Excel & Spreadsheet</h3>
-          <p>Data Entry, Otomatisasi Data & Rumus</p>
-        </div>
-        <div>
-          <h3>Web Development</h3>
-          <p>html, CSS, JavaScript</p>
-        </div>
-      </section>
-      <!-- SKILL list End -->
+        <!-- SKILL list Start -->
+          <section class="Askill">
+            <h1>Professional Skill</h1>
+            <div>
+              <h3>Akuntansi & Keuangan</h3>
+              <p>Laporan Keuangan, rasio keuangan</p>
+            </div>
+            <div>
+              <h3>MS Excel & Spreadsheet</h3>
+              <p>Data Entry, Otomatisasi Data & Rumus</p>
+            </div>
+            <div>
+              <h3>Web Development</h3>
+              <p>html, CSS, JavaScript</p>
+            </div>
+          </section>
+        <!-- SKILL list End -->
 
-      <!-- Experience Start -->
-      <section class="Aexp">
-        <h1>Professional Journey</h1>
-        <div>
-          <h3>Staff Tata Usaha dan Administrasi</h3>
-          <h5>Yayasan Haqqus Sunnah Pemalang</h5>
-          <h5>Juni 2024 s.d. Sekarang</h5>
-          <p>
-            Mengelola administrasi kepegawaian, keuangan, dan operasional di
-            <span>SDIT Bina Ilmu Pemalang</span> dan <span>SMPIT Bina Ilmu Pemalang</span>. 
-            Mengembangkan database administrasi berbasis otomatisasi menggunakan Excel/Spreadsheet,
-            meningkatkan efisiensi kerja hingga 30%. Bertanggung jawab atas pengelolaan tunggakan 
-            siswa dengan strategi penagihan yang lebih sistematis
-          </p>
-        </div>
-        <div>
-          <h3>Finance dan Administration Staff (FA)</h3>
-          <h5>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h5>
-          <h5 class="Italic">Januari s.d. Juni 2024</h5>
-          <p>
-            Bertanggung jawab atas pengelolaan dana hibah Global Fund untuk Program Pemberantasan TBC 
-            di Indonesia, termasuk penyusunan laporan keuangan, analisis efektivitas penggunaan dana, 
-            serta penguatan strategi keuangan guna memastikan transparansi dan akuntabilitas.
-            <br><br>
-            Selain itu, saya berperan dalam penyelenggaraan sosialisasi/kampanye pencegahan dan pendampingan 
-            pasien TBC melalui kolaborasi dengan pemerintah serta fasilitas kesehatan setempat, dengan 
-            tujuan meningkatkan jangkauan dan efektivitas program. Komitmen kami berfokus pada efisiensi, 
-            kepatuhan, dan optimalisasi penggunaan dana untuk mendukung pemberantasan TBC secara berkelanjutan.
-          </p>
-        </div>
-        <div>
-          <h3>Staf Khusus Waket 2 / Accounting</h3>
-          <h5>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h5>
-          <h5>(Sekarang: Institut Agama Islam Pemalang (INSIP))</h5>
-          <h5 class="Italic">Tahun 2021 s.d. Tahun 2024</h5>
-          <p>
-            Mendukung Wakil Ketua 2 dalam pengelolaan keuangan kampus, termasuk perencanaan anggaran, 
-            penyusunan laporan keuangan internal, serta Melakukan review dan verifikasi awal terhadap 
-            pengajuan proposal kegiatan dari Dewan Mahasiswa (DEMA) ataupun pihak lainnya, guna memastikan 
-            kesesuaian anggaran dan kelengkapan administrasi. Mengembangkan sistem pencatatan administrasi 
-            & keuangan berbasis spreadsheet guna meningkatkan transparansi dan efisiensi administrasi institusi.
-            <br><br>
-            Dipercaya sebagai Koordinator Penerimaan Mahasiswa Baru (PMB), berperan sebagai penghubung antara 
-            kampus dan pihak eksternal dalam proses rekrutmen mahasiswa. Juga aktif dalam berbagai kepanitiaan 
-            kegiatan akademik dan administratif untuk mendukung operasional kampus.
-          </p>
-        </div>
-        <div>
-          <h3>Staf Admin Gudang</h3>
-          <h5>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h5>
-          <h5 class="Italic">Tahun 2017 s.d. Tahun 2019</h5>
-          <p>
-            Bertanggung jawab atas administrasi persediaan barang, pencatatan stok masuk dan keluar, 
-            serta koordinasi dengan tim produksi dan sales untuk memastikan kelancaran distribusi produk. 
-            Berhasil meningkatkan akurasi pencatatan stok hingga 80% dengan implementasi sistem kontrol baru.
-          </p>
-        </div>
-        <div>
-          <h3>Branch Inventory Control (BIC)</h3>
-          <h5>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h5>
-          <h5 class="Italic">Tahun 2015 s.d. Tahun 2016</h5>
-          <p>
-            Melakukan audit stok di lebih dari 100 gerai Indomaret di wilayah Tegal hingga Pemalang. 
-            Bertanggung jawab dalam investigasi fraud (penyimpangan/kecurangan) menggunakan analisis data, 
-            pengecekan CCTV, dan verifikasi fisik barang. Mendapatkan skor penilaian terbaik dalam penemuan 
-            bukti fraud di tahun 2015.
-          </p>
-        </div>
-      </section>
-      <!-- Experience End -->
+        <!-- Experience Start -->
+          <section class="Aexp">
+            <h1>Professional Journey</h1>
+            <div>
+              <h3>Staff Tata Usaha dan Administrasi</h3>
+              <h5>Yayasan Haqqus Sunnah Pemalang</h5>
+              <h5>Juni 2024 s.d. Sekarang</h5>
+              <p>
+                Mengelola administrasi kepegawaian, keuangan, dan operasional di
+                <span>SDIT Bina Ilmu Pemalang</span> dan <span>SMPIT Bina Ilmu Pemalang</span>. 
+                Mengembangkan database administrasi berbasis otomatisasi menggunakan Excel/Spreadsheet,
+                meningkatkan efisiensi kerja hingga 30%. Bertanggung jawab atas pengelolaan tunggakan 
+                siswa dengan strategi penagihan yang lebih sistematis
+              </p>
+            </div>
+            <div>
+              <h3>Finance dan Administration Staff (FA)</h3>
+              <h5>Yayasan Mentari Sehat Indonesia - SSR Pemalang</h5>
+              <h5 class="Italic">Januari s.d. Juni 2024</h5>
+              <p>
+                Bertanggung jawab atas pengelolaan dana hibah Global Fund untuk Program Pemberantasan TBC 
+                di Indonesia, termasuk penyusunan laporan keuangan, analisis efektivitas penggunaan dana, 
+                serta penguatan strategi keuangan guna memastikan transparansi dan akuntabilitas.
+                <br><br>
+                Selain itu, saya berperan dalam penyelenggaraan sosialisasi/kampanye pencegahan dan pendampingan 
+                pasien TBC melalui kolaborasi dengan pemerintah serta fasilitas kesehatan setempat, dengan 
+                tujuan meningkatkan jangkauan dan efektivitas program. Komitmen kami berfokus pada efisiensi, 
+                kepatuhan, dan optimalisasi penggunaan dana untuk mendukung pemberantasan TBC secara berkelanjutan.
+              </p>
+            </div>
+            <div>
+              <h3>Staf Khusus Waket 2 / Accounting</h3>
+              <h5>Sekolah Tinggi Ilmu Tarbiyah (STIT) Pemalang</h5>
+              <h5>(Sekarang: Institut Agama Islam Pemalang (INSIP))</h5>
+              <h5 class="Italic">Tahun 2021 s.d. Tahun 2024</h5>
+              <p>
+                Mendukung Wakil Ketua 2 dalam pengelolaan keuangan kampus, termasuk perencanaan anggaran, 
+                penyusunan laporan keuangan internal, serta Melakukan review dan verifikasi awal terhadap 
+                pengajuan proposal kegiatan dari Dewan Mahasiswa (DEMA) ataupun pihak lainnya, guna memastikan 
+                kesesuaian anggaran dan kelengkapan administrasi. Mengembangkan sistem pencatatan administrasi 
+                & keuangan berbasis spreadsheet guna meningkatkan transparansi dan efisiensi administrasi institusi.
+                <br><br>
+                Dipercaya sebagai Koordinator Penerimaan Mahasiswa Baru (PMB), berperan sebagai penghubung antara 
+                kampus dan pihak eksternal dalam proses rekrutmen mahasiswa. Juga aktif dalam berbagai kepanitiaan 
+                kegiatan akademik dan administratif untuk mendukung operasional kampus.
+              </p>
+            </div>
+            <div>
+              <h3>Staf Admin Gudang</h3>
+              <h5>CV. Multikomunika (Authorized Dealer XL-Axiata) Semarang</h5>
+              <h5 class="Italic">Tahun 2017 s.d. Tahun 2019</h5>
+              <p>
+                Bertanggung jawab atas administrasi persediaan barang, pencatatan stok masuk dan keluar, 
+                serta koordinasi dengan tim produksi dan sales untuk memastikan kelancaran distribusi produk. 
+                Berhasil meningkatkan akurasi pencatatan stok hingga 80% dengan implementasi sistem kontrol baru.
+              </p>
+            </div>
+            <div>
+              <h3>Branch Inventory Control (BIC)</h3>
+              <h5>PT. Indomarco Prismatama,Tbk. - Branch Cirebon</h5>
+              <h5 class="Italic">Tahun 2015 s.d. Tahun 2016</h5>
+              <p>
+                Melakukan audit stok di lebih dari 100 gerai Indomaret di wilayah Tegal hingga Pemalang. 
+                Bertanggung jawab dalam investigasi fraud (penyimpangan/kecurangan) menggunakan analisis data, 
+                pengecekan CCTV, dan verifikasi fisik barang. Mendapatkan skor penilaian terbaik dalam penemuan 
+                bukti fraud di tahun 2015.
+              </p>
+            </div>
+          </section>
+        <!-- Experience End -->
 
-      <!-- Portofolio Start -->
-      <section class="Aportfolio">
-        <h2>Portofolio</h2>
-        <div class="Aport">
-          <div>
-            <img src="#" alt="project1"/>
-            <h2>proyek1</h2>
-            <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-          </div>
-          <div>
-            <img src="#" alt="project2"/>
-            <h2>proyek2</h2>
-            <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-          </div>
-          <div>
-            <img src="#" alt="project3"/>
-            <h2>proyek3</h2>
-            <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
-          </div>
-        </div>
-      </section>
-      <!-- Portofolio End -->
+        <!-- Portofolio Start -->
+          <section class="Aportfolio">
+            <h2>Portofolio</h2>
+            <div class="Aport">
+              <div>
+                <img src="#" alt="project1"/>
+                <h2>proyek1</h2>
+                <p>berisi deskripsi proyek 1, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+              </div>
+              <div>
+                <img src="#" alt="project2"/>
+                <h2>proyek2</h2>
+                <p>berisi deskripsi proyek 2, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+              </div>
+              <div>
+                <img src="#" alt="project3"/>
+                <h2>proyek3</h2>
+                <p>berisi deskripsi proyek 3, nanti kita isi supaya isinya lebih menarik yaaaaaaaaa</p>
+              </div>
+            </div>
+          </section>
+        <!-- Portofolio End -->
+       </section>
+      <!-- Main Content End-->
 
       <!-- Footer Start -->
       <footer>
